# opensea-random-nft-pfp-scrapper

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py  old_main1.py  old_main2.py
src/utils/: dir_paths.py  logger_custom.py  user_agents.py
